Add mobile version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="schedule-container container">
+<div class="schedule-container">
   <h1 class="title">Week schedule</h1>
 
   <div class="form-container">
