--- a/src/app/components/day-schedule/day-schedule.component.html
+++ b/src/app/components/day-schedule/day-schedule.component.html
@@ -14,7 +14,8 @@
     <form #todoForm="ngForm" (ngSubmit)="todoForm.resetForm()" ngNativeValidate>
         <div class="input-block">
             <input #time type="time" class="form-control" placeholder="Add Time" name="time" ngModel required>
-            <input #task type="text" class="form-control" placeholder="Add Todo" name="task" ngModel required>
+            <input #task type="text" class="form-control task-input" placeholder="Add Todo" name="task" ngModel
+                required>
 
             <button type="submit" class="input-group-text" (click)="addTodo(time.value, task.value)">
                 <i class="material-icons">add</i>
