--- a/src/app/components/day-schedule/day-schedule.component.scss
+++ b/src/app/components/day-schedule/day-schedule.component.scss
@@ -4,7 +4,12 @@
     @include app-border();
 
     flex-grow:1;
-    margin: 0 20px;
+    margin-right: 20px;
+
+    @media screen and (max-width: 459px) {
+      margin-right: 0;
+      margin-bottom: 20px;
+  }
 }
 
 .input-block {
@@ -19,7 +24,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 30px;
+    padding: 20px;
 }
 
 .data {
@@ -33,14 +38,22 @@
   background:transparent;
 }
 
+.task-input {
+  @media screen and (max-width: 459px) {
+    font-size: 12px;
+  }
+}
+
 .record {
     text-align: center;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 15px;
 
     > input {
       width: 44%;
       text-align: center;
+      text-overflow: ellipsis;
     }
 
     > i {
