--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,6 +11,7 @@ body{
     margin: 80px auto;
     padding: 80px 50px;
     width: 85%;
+    max-width: 768px;
 
     @media screen and (max-width: 767px) {
         width: 100%;
